breaks SocketServer class into smaller methods.  cleans up some of CollisionChecker class code